moved null pointer check to argument. removed unused variables and methods in format enum. removed default in bean config switch. removed build warnings from bytebuddy and classpath warning for java 21. added call verification in small formatter test.