@@ -14,7 +14,8 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-
+        <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
+        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
         <junit-jupiter-engine.version>5.12.1</junit-jupiter-engine.version>
         <junit-jupiter-params.version>5.12.1</junit-jupiter-params.version>
         <mockito-core.version>5.3.1</mockito-core.version>
@@ -90,4 +91,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
